fonction permet d'ajouter et d'afficher un client user

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container mt-5">
-    <h2 class="text-center alert alert-danger">Fonction CRUD Basée sur la gestion du stock </h2>
+    <h2 class="text-center alert alert-danger">Fonction CRUD Basée sur la gestion de stock </h2>
     {% block content%} {% endblock content%}
     </div>
     <script src="{% static 'inventory/js/jquery.js' %}"></script>
