--- a/inventory/templates/inventory/add_show_client.html
+++ b/inventory/templates/inventory/add_show_client.html
@@ -9,7 +9,40 @@
 <input type="submit" class="btn btn-success" value="Ajouter">
 </form>
     </div>
-</div>
+    <div class="col-sm-7 offset-1">
+        <h4 class="text-center alert alert-info">Afficher la liste des clients</h4>
+        {% if clit %}
+        <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Code client</th>
+                <th scope="col">Nom</th>
+                <th scope="col">E-mail</th>
+                <th scope="col">Mot de passe</th>
+                <th scope="col">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+                {% for st in clit%}
+              <tr>
+                <th scope="row">{{st.id}}</th>
+                <td>{{st.name}}</td>
+                <td>{{st.email}}</td>
+                <td>{{st.password}}</td>
+                <td>
+                    <a href="#" class="btn btn-warning bt-sm">Modifier</a>
+                    <a href="#" class="btn btn-danger bt-sm">Supprimer</a>
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+
+        {% else %}
+        <h4 class="text-center alert alert-warning">Pas d'enregistrements</h4>
+        
+        {% endif %}
+    </div>
     
 
 
